Update after course ended