@@ -1,16 +1,28 @@
 ![header](capPRG.png)
 
-## Useful links:
+**1CFS Programació 23/24**
 
-- [www.aceptaelreto.com](http://www.aceptaelreto.com)
-- [www.programame.com](http://www.programame.com)
-- [www.las12uvas.es](http://www.las12uvas.es)
-- Scape room l'Esmorzaret
+Links interesantes
+
+- **Jueces online para jugar con la programación:**
+  - [www.aceptaelreto.com](http://www.aceptaelreto.com)
+  - [www.programame.com](http://www.programame.com)
+  - [www.las12uvas.es](http://www.las12uvas.es)
+  - https://adventofcode.com/
+  - https://cses.fi/
+  - https://codingbat.com/java
+  - https://codember.dev
+  - https://projecteuler.net/
+  - https://www.bebras.org/
+  - https://exercism.com/ **(nou)**
+  - https://www.codechef.com/ **(nou)**
+  - https://jo-el.es **(nou)**
 - [Ejemplos de los problemas con la coma flotante (float)](https://jvns.ca/blog/2023/01/13/examples-of-floating-point-problems/)
+- [Listado de problemas de AceptaElReto resueltos por el profesor, y categorizados por unidades del curso](AceptaElReto.md).
 
 # 1ª Evaluación
 
-## UD01: Desarrollo de software
+## UD01: Elementos de un programa informático
 
 ### Contenido
 [![Video UD01](https://img.youtube.com/vi/vNu3GjVfMYc/0.jpg)](https://www.youtube.com/watch?v=vNu3GjVfMYc)
@@ -25,11 +37,11 @@
 - [UD00_GitHubVsCode_ES.pdf](UD01/UD00_GitHubVsCode_ES.pdf)
 - [UD00_Markdown_manual_supervivencia.pdf](UD01/UD00_Markdown_manual_supervivencia.pdf)
 - [¿Porqué java se ejecuta sin que yo compile?](https://openjdk.org/jeps/330)
+-  [UD01_Anexo_EN.pdf](UD01/UD01_Anexo_EN.pdf) <-- Instrucciones para instalar el IDE
 
 ### Actividades
 - `1. Retos` (1, 2, 3, 4, 5, 6, 7)
-- `2. Ejercicios` (1, 2, 3, 4, 5, 6, 7)
-- `2. Ejercicios` (8, 9 i 10)
+- `2. Ejercicios` (1, 2, 3, 4, 5, 6, 7, 8, 9 i 10)
 - `3. Actividades` (1, 2, 3, 4, 5)
 - `3. Actividades` (8, 9, 10, 11, 12, 13, 16, 17, 18)
 - `2. Ejercicios` (13, 14, 15, 18)
@@ -45,10 +57,6 @@
   - [UD02_ES.pdf](UD02/UD02_ES.pdf)
   - [UD02_ejercicios_ES.pdf](UD02/UD02_ejercicios_ES.pdf)
   - [Samples Sources](_code/Programacion/src/UD02/)
-
-### Recursos:
-
-- [Herramientas útiles del IDE](UD02/UD02_anexo_ES.pdf)
 
 ### Actividades
 
@@ -80,35 +88,33 @@ System.out.println("\nTotal Time: " + (end - start) + "ms");
 
   - `1. Retos` (1)
 
-- `2.1. if else` (1, 2, 3, 4, 6 y 7)
+- `2.1. if else` (1, 2, 3, 4, 6, 7, 8, 9, 10, 11)
 
-- `2.1 if else` (8, 9, 10, 11)
+- `2.4 switch` (2, 3, 4)
 
-- `2.4 switch` (53, 54, 55)
+- `2.1 If else` (12, 16, 17, 18(charAt), 19)
 
-- `2.1 If else` (13, 17, 18, 19(charAt), 20)
-
-- `2.2 bucles simples` (21, 22, 30, 33, 34)
+- `2.2 bucles simples` (1, 2, 11, 13, 14)
 
 - `1. Retos` (2)
 
-- `2.2 Bucles simples` (24, 25, 31)
+- `2.2 Bucles simples` (3, 4, 10)
 
 - `1 Retos` (7)
 
 - `3 Actividades` (1, 2, 3, 4, 5)
 
-- `2.5 en papel...` (56, 57, 58, 59, 60, 61)
+- `2.5 en papel...` (1, 2, 3, 4, 5, 6)
 
-- `2.2 bucles simples` (26, 27)
+- `2.2 bucles simples` (5, 6, 7)
 
-- `2.3 bucles anidados` (35, 36)
+- `2.3 bucles anidados` (1, 2)
 
 - `1. Retos` (4)
 
-- `2.7 Excepciones` (63, 64)
+- `2.7 Excepciones` (13, 14,16,17)
 
-- `2.3. Bucles anidados` (41, 42, 43, 44.1)
+- `2.3. Bucles anidados` (7, 8, 9, 10.1)
 
 - `2.6 Trazas` (1)
 
@@ -138,11 +144,38 @@ System.out.println("\nTotal Time: " + (end - start) + "ms");
 
 ### Actividades
 
-  - `1.1. Arrays` (1)
+- `1.1. Arrays` (1)
+
 - `1.1. Arrays` (2, 3, 4, 5, 6, 7)
+
+  - **Ayuda para el ejercicio 2:**
+
+    - [Lluvias.java](UD04/Lluvias.java)
+    - [lluviasenero.txt](UD04/lluviasenero.txt)
+    - RESULTADOS EJERCICIO 2:
+
+    ```
+    La suma de las lluvias es 93,30 litros
+    La media de las lluvias es 3,01 litros
+    La máxima de las lluvias es 12,40 litros
+    La máxima de las lluvias fué el dia 17
+    La mínima de las lluvias es 0,00 litros
+    La mínima de las lluvias fué el dia 1
+    Ha habido un total de 16 dias sin lluvia
+    Ha habido un total de 11 dias en los que la lluvia ha superado la media
+    La segunda quincena ha llovido más que la otra
+    Ha habido 8 dias en los que ha llovido menos que el dia siguiente
+    ```
+
 - `1.2. ArraysBusqueda` (1, 2, 3, 4, 5, 6, 7)
+
 - `1.3 Matrices` (1, 2, 3) (*el 4 lo podeis hacer pero lo dejo como voluntario*).
+
 - `2. Recursividad` (1, 2, 4) (*el 9 es un problema muy típico en informática, lo podéis intentar de  manera voluntaria, tanto por iteración, como por recursividad*)
+
+[Pre-calentamiento del calentamiento de Navidad.  URL](ProgramameAlumnos.md)                                                                                                            
+
+# 2^a^ Evaluación
 
 ## UD05: Desarrollo de clases
 
@@ -159,12 +192,14 @@ System.out.println("\nTotal Time: " + (end - start) + "ms");
 
   - `UD05._2.gestionHospital`
   - `UD05._3.contrarreloj`
+    - [ContraReloj.java](UD05/assets/ContraReloj.java) (Archivo de ayuda para resolver el ejercicio)
+
   - `UD05._4.reservasLibreria`
   - `Wrappers` (2.1, 2.2, 2.3, 2.4)
   - `Fechas` (2.6, 2.7, 2.8, 2.16, 2.20)
   - `UD05._6.juegoDeCartas`
   - ``UD05._5.gestorCorreoElectronico`
-  - `Actividades` (21-25)
+  - `Actividades` (21, 22, 23, 24 y 25)
 
 ## UD06: Lectura y escritura de información
 
@@ -174,13 +209,12 @@ System.out.println("\nTotal Time: " + (end - start) + "ms");
 
   - [UD06_ES.pdf](UD06/UD06_ES.pdf)
   - [UD06_ejercicios_ES.pdf](UD06/UD06_ejercicios_ES.pdf)
+  - [Documentos.zip](UD06/Documentos.zip)
   - [UD06_anexo_ES.pdf](UD06/UD06_anexo_ES.pdf)
   - [Samples Sources](_code/Programacion/src/UD06/)
   - [comparativaCRUD.pdf](UD06/comparativaCRUD.pdf)
 
 ### Actividades
-
-*Puertos abiertos a \*.amazonaws.com: 22, 1433, 1521, 1883, 3306, 5432, 8883, 6000-6100, 27017-27020*
 
   - `UD06.5.Lectura/escritura en ficheros` (9, 10)
   - `UD06._1.gestorVuelos`
@@ -190,6 +224,17 @@ System.out.println("\nTotal Time: " + (end - start) + "ms");
 - `UD06.10.Lionel` (21, 23, 24, 25)
 - `UD06._2.maquinaExpendedora`
 - `UD06_11Aún más ejercicios` (1, 2, 3, 4, 5)
+- `UD06.10.Más ejercicios` (32)
+
+- Sigue las instrucciones del documento: [UD06_anexo_ES.pdf](UD06/UD06_anexo_ES.pdf)
+
+- *Puertos abiertos a \*.amazonaws.com: 22, 1433, 1521, 1883, 3306, 5432, 8883, 6000-6100, 27017-27020*
+
+  Genera un pequeño documento donde muestres una captura de pantalla  donde se vea el servidor después de haber esperado la conexión, haber  recibido los datos del cliente y devuelto la información procesada.  Adjunta también la captura del mismo ejemplo desde el punto de vista del cliente. El ejemplo debe incluir tu nombre y apellidos en la  información enviada y recibida.
+
+  Convierte el documento en pdf y adjúntalo a la tarea.
+
+# 3^a^ Evaluación
 
 ## UD07: Colecciones 
 
@@ -204,15 +249,15 @@ System.out.println("\nTotal Time: " + (end - start) + "ms");
 
 ### Actividades
 
-  - `UD07.2 Actividades` (Actividad 1, 2 y 3)
-- `UD07.2 Actividades` (Actividad 4 y 5)
+  - `UD07.2 Actividades` (Actividad 1, 2, 3, 4 y 5)
 - `UD07.1 Ejercicios` (Ejercicio 1)
+- `UD07.4.Funcional` (1, 2, 3)
 
 ## UD08: Composición, Herencia y Polimorfismo 
 
 ### Contenido
 
-[![Video UD06](https://img.youtube.com/vi/-LARK9JM3V4/0.jpg)](https://www.youtube.com/watch?v=-LARK9JM3V4)
+[![Video UD06](https://img.youtube.com/vi/SI7O81GMG2A/0.jpg)](https://www.youtube.com/watch?v=SI7O81GMG2A)
 
   - [UD08_ES.pdf](UD08/UD08_ES.pdf)
   - [UD08_ejercicios_ES.pdf](UD08/UD08_ejercicios_ES.pdf)
@@ -234,9 +279,9 @@ System.out.println("\nTotal Time: " + (end - start) + "ms");
 [![Video UD06](https://img.youtube.com/vi/z6WppAQ3LUg/0.jpg)](https://www.youtube.com/watch?v=z6WppAQ3LUg)
 
   - [UD09_ES.pdf](UD09/UD09_ES.pdf)
-  - [UD09_JavaFX_en_NetBeans_ES.pdf](UD09/UD09_JavaFX_en_NetBeans_ES.pdf)
-  - [UD09_SceneBuilder_ES.pdf](UD09/UD09_SceneBuilder_ES.pdf)
-  - [UD09_Calculadora_en_JavaFX_ES.pdf](UD09/UD09_Calculadora_en_JavaFX_ES.pdf)
+  - [UD09_JavaFX_en_IntelliJ_ES.pdf](UD09/UD09_JavaFX_en_IntelliJ_ES.pdf)
+  - [UD09_SceneBuilder_IntelliJ_ES.pdf](UD09/UD09_SceneBuilder_IntelliJ_ES.pdf)
+  - [UD09_Calculadora_en_JavaFX_IntelliJ_ES.pdf](UD09/UD09_Calculadora_en_JavaFX_IntelliJ_ES.pdf)
   - [UD09_ejercicios_ES.pdf](UD09/UD09_ejercicios_ES.pdf)
   - [Samples Sources](_code/Programacion/src/UD09/)
 
@@ -244,6 +289,51 @@ System.out.println("\nTotal Time: " + (end - start) + "ms");
 
   - `UD09.4_Mas_Ejercicios` (1, 2 y 3)
 - `UD09.3_Actividades` (1 y 4)
+- Sigue la guía [UD09_Calculadora_en_JavaFX_IntelliJ_ES.pdf](UD09/UD09_Calculadora_en_JavaFX_IntelliJ_ES.pdf) "Calculadora en JavaFX (IntelliJ)"
+
+  La tarea consiste en seguir la guia y crear tu aplicación en IntelliJ, pon como título de aplicación tu nombre y apellidos y a continuación genera el archivo jar siguiendo estas instrucciones:
+
+  > Instructions:
+  >
+  > - `File` -> `Project Structure` -> `Project Settings` -> `Artifacts` -> Click `+` (plus sign) -> `Jar` -> `From modules with dependencies...`
+  > - Select a Main Class (the one with `main()` method) if you need to make the jar runnable.
+  > - Select `Extract to the target Jar`
+  > - Click `OK`
+  > - Click `Apply/OK`
+  >
+  > The above sets the "skeleton" to where the jar will be saved to. To actually build and save it do the following:
+  >
+  > - `Build` -> `Build Artifact` -> `Build`
+  >
+  > Try Extracting the .jar file from:
+  >
+  > ```java
+  >  📦ProjectName
+  >   ┗ 📂out
+  >     ┗ 📂artifacts
+  >       ┗ 📂ProjectName_jar
+  >          ┗ 📜ProjectName.jar
+  > ```
+  >
+  > References:
+  >
+  > - (Aug 2010) http://blogs.jetbrains.com/idea/2010/08/quickly-create-jar-artifact/ (Here's how to build a jar with IntelliJ 10)
+  > - (Mar 2023) https://www.jetbrains.com/help/idea/compiling-applications.html#package_into_jar
+  >
+  > Extraido de: https://stackoverflow.com/questions/1082580/how-to-build-jars-from-intellij-idea-properly
+
+  Para lanzar la ejecución del `jar` (recomendado antes de enviarlo a `AULES`) debes seguir estas instrucciones:
+
+  > Debes ejecutar el siguiente comando en la consola, sustituyendo:
+  >
+  > - \#RUTA_JAVA_FX: por la ruta absoluta donde se encuentran los archivos jar de javaFx
+  > - \#NOMBRE_DE_TU_JAR: nombre del jar que has generado en el paso anterior
+  >
+  > ```sh
+  > java --module-path #RUTA_JAVA_FX --add-modules javafx.controls,javafx.fxml -jar #NOMBRE_DE_TU_JAR.jar
+  > ```
+
+  Envia el fichero `JAR` y un `pdf` explicando las partes que te han parecido más complicadas al realizar la práctica.
 
 ## UD10: Acceso a datos
 
@@ -252,12 +342,12 @@ System.out.println("\nTotal Time: " + (end - start) + "ms");
 [![Video UD06](https://img.youtube.com/vi/cFLsynl91B0/0.jpg)](https://www.youtube.com/watch?v=cFLsynl91B0)
 
   - [UD10_ES.pdf](UD10/UD10_ES.pdf)
-  - [UD10_ejercicios_ES.pdf](UD10/UD10_ejercicios_ES.pdf)
+  -  [UD10_anexo_IntelliJ_ES.pdf](UD10/UD10_anexo_IntelliJ_ES.pdf)
   - [Samples Sources](_code/Programacion/src/UD10/)
 
 ### Actividades
 
-  - Sigue la guía [UD10_anexo_ES.pdf](UD10/UD10_anexo_ES.pdf) "Anexo UD10: BBDD en la nube (AWS)"
+  - Sigue la guía [UD10_anexo_IntelliJ_ES.pdf](UD10/UD10_anexo_IntelliJ_ES.pdf) "Anexo UD10: BBDD en la nube con IntelliJ (AWS)"
 
     Entrega un documento pdf (Explicando la opción elegida y adjuntado la explicación y capturas de pantalla) y un proyecto/archivo *.java  resolviendo una de las dos posibilidades:
 
